--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -119,6 +119,15 @@ td:nth-child(2) {
   }
 }
 
+td:nth-child(3) {
+  div {
+    width: 30rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+}
+
 td:nth-child(4) {
   font-size: 1.1rem;
   font-weight: 500;
