--- a/src/views/Mail/components/ReadMail.scss
+++ b/src/views/Mail/components/ReadMail.scss
@@ -5,7 +5,18 @@
   padding: -8px 4rem 0 4rem;
   padding: 0 4rem;
   margin: 0rem;
-  margin-top: -2rem;
+  margin-top: -1rem;
+  font-size: 1.2rem;
+}
+
+.second-cont-2 {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: -5px 4rem 0 4rem;
+  padding: 0 4rem;
+  margin: 0rem;
+  margin-top: 1rem;
   font-size: 1.2rem;
 }
 
