--- a/src/views/Mail/components/ReadMail.scss
+++ b/src/views/Mail/components/ReadMail.scss
@@ -2,10 +2,10 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: -8px 4rem 0 4rem;
+  padding: -.8rem 4rem 0 4rem;
   padding: 0 4rem;
   margin: 0rem;
-  margin-top: -2rem;
+  margin-top: -1rem;
   font-size: 1.2rem;
 }
 
